Toggle read status button

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <script src="./script.js" defer></script>
 </head>
 <body>
+  <h1>Your Library</h1>
   <button class="add-book">New Book</button>
-  <div class="new-book">
+  <div class="new-book hidden">
     <div class="form-area">
       <h1>Add a New Book</h1>
       <form>
@@ -36,7 +37,10 @@
           </li>
         </ul>
       </form>
-      <button class="submit-new-book">Add Book</button>
+      <div class="buttons">
+        <button class="submit-new-book">Add Book</button>
+        <button class="cancel">Cancel</button>
+      </div>
     </div>
   </div>
   <div class="container"></div>
